# TCP-Client-Server

./: LICENSE  README.md  build_client  build_server
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
general/: CMakeLists.txt
general/src/: FileLogger.cpp  FileLogger.h  IClient.h  ILogger.h  IServer.h  MessageQueue.cpp  MessageQueue.h  SocketAddress.h  SocketExceptions.cpp  SocketExceptions.h  SocketUtils.cpp  SocketUtils.h  TCPSocketWrapper.cpp  TCPSocketWrapper.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h
